--- a/uimodule/webapp/view/MainView.view.xml
+++ b/uimodule/webapp/view/MainView.view.xml
@@ -7,6 +7,7 @@
       <Page title="{i18n>title}">
         <content>
           <Button text="featureButton1" />
+          <Button text="developbranchButton"/>
         </content>
       </Page>
     </pages>
