This is my unicorn🦄
My manager likes to have an additional button. But the thing

--- a/uimodule/webapp/view/MainView.view.xml
+++ b/uimodule/webapp/view/MainView.view.xml
@@ -8,6 +8,7 @@
         <content>
           <Button text="featureButton1" />
           <Button text="developbranchButton"/>
+          <Button text="Q1ReleaseCommentButton"></Button>
         </content>
       </Page>
     </pages>
